# chunk

./: AGENTS.md  Cargo.toml  README.md
docs/: architecture.md
src/: app.rs  ask_ai.rs  clipboard.rs  config.rs  custom_command.rs  diff_render.rs  editor.rs  git.rs  keybind.rs  main.rs  model.rs  patch.rs  process.rs  review_source.rs  rows.rs  runtime.rs  scroll_text.rs  search.rs  selection.rs  syntax.rs  theme.rs  ui.rs  viewport.rs
src/app/: diff_frame.rs  diff_pane.rs  focused_review_target.rs  keys.rs  overlay.rs  reload.rs  review_session.rs  search.rs  tests.rs
src/rows/: diff.rs  file_summary.rs  intraline.rs  markdown.rs  sidebar.rs  text.rs
