[package]
name = "chunk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
notify = "8.2"
ratatui = "0.29"
syntect = { version = "5.3", default-features = false, features = ["parsing", "regex-onig"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-onig"] }
