[package]
name = "chunk"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
notify = "8.2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.3", default-features = false, features = ["parsing", "regex-onig"] }
toml = "1.1"
two-face = { version = "0.5.1", default-features = false, features = ["syntect-onig"] }
